<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@color/colorPrimary"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:id="@+id/label_appname_login"
            android:text="@string/app_name"
            android:fontFamily="@font/lobster_two"
            android:textColor="@color/branco"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img_login"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_below="@id/label_appname_login"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login"
            android:textColor="@color/branco"
            android:textSize="20sp"
            android:text="@string/email"
            android:layout_below="@id/img_login"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:background="@color/branco"
            android:layout_below="@id/img_login"
            android:layout_alignBaseline="@id/tv_login"
            android:layout_toRightOf="@id/tv_login"
            android:layout_marginLeft="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_senha"
            android:textColor="@color/branco"
            android:textSize="20sp"
            android:text="@string/senha"
            android:layout_below="@id/et_email"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_senha"
            android:background="@color/branco"
            android:layout_below="@id/et_email"
            android:layout_alignBaseline="@id/tv_senha"
            android:layout_toRightOf="@id/tv_senha"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_senha"
            android:id="@+id/bt_login"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/branco"
            android:text="@string/login"
            android:textSize="25sp"
            android:onClick="getInfoLogin"/>

    </RelativeLayout>

</ScrollView>