<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventoDetalhesActivity"
    tools:showIn="@layout/activity_evento_detalhes"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_eventoDetalhes"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/preto"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lobster_two"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_descricaoDetalhes"
        android:layout_below="@id/tv_eventoDetalhes"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_data"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_below="@id/tv_descricaoDetalhes"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/quando"
            android:textColor="@color/preto"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/tv_dataDetalhes"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_local"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_below="@id/layout_data"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/onde"
            android:textColor="@color/preto"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/tv_localDetalhes"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_valor"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_below="@id/layout_local"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/valor"
            android:textColor="@color/preto"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/tv_valorDetalhes"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_vagasDetalhes"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_below="@id/layout_valor"
        android:layout_marginTop="15dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_inscrever"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/branco"
        android:layout_marginBottom="10dp"
        android:text="@string/inscrever_se"/>

</RelativeLayout>